# near_redacted_contracts

./: README.md
backend/: .gitignore  Cargo.toml  rust-toolchain.toml
backend/src/: error.rs  main.rs  prompt.rs  state.rs
backend/src/agent/: agent.rs  mod.rs  researcher.rs  writer.rs
contracts/: Cargo.toml
contracts/counter/src/: lib.rs
contracts/moraq/: Cargo.toml  README.md
contracts/moraq/src/: lib.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/.next/: react-loadable-manifest.json
frontend/.next/cache/: config.json
frontend/.next/server/: middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @adraffy.js  @coinbase.js  @ledgerhq.js  @lit-labs.js  @lit.js  @metamask.js  @meteorwallet.js  @mintbase-js.js  @motionone.js  @near-js.js  @noble.js  @stablelib.js  @swc.js  @wagmi.js  @walletconnect.js  abitype.js  abort-controller.js  async-mutex.js  atomic-sleep.js  base-x.js  bignumber.js.js  bn.js.js  borsh.js  brorand.js  bs58.js  bufferutil.js  cbw-sdk.js  charenc.js  clsx.js  colorette.js  copy-to-clipboard.js  crypt.js  dateformat.js  dayjs.js  debug.js  decode-uri-component.js  depd.js  destr.js  detect-browser.js  dijkstrajs.js  (+106 more)
frontend/.next/static/chunks/: _app-pages-browser_node_modules_cbw-sdk_dist_index_js.js  _app-pages-browser_node_modules_coinbase_wallet-sdk_dist_index_js.js  _app-pages-browser_node_modules_near-wallet-selector_ethereum-wallets_node_modules_isows__esm-cbcc41.js  app-pages-internals.js  webpack.js  (+8 more)
src/: lib.rs
(+8 files in other folders)
